# wiki-rag-azure

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-api.yml  deploy-indexer.yml  deploy-ingest.yml
api/: Dockerfile  Makefile  pyproject.toml
api/src/api/: __init__.py  config.py  db.py  llm.py  main.py  models.py  retrieval.py
indexer/: Dockerfile  Makefile  pyproject.toml
indexer/src/indexer/: embeddings.py  loader.py  main.py  nodes.py  settings.py  vectorstore.py
infra/: README.md  github_oidc.tf  locals.tf  main.tf  openai.tf  outputs.tf  random.tf  versions.tf
ingest/: pyproject.toml
ingest/scripts/: test_ingest.sh
ingest/src/ingest/: blob.py  main.py  models.py  parser.py  s3.py  wikipedia.py
scripts/: build_push_api.sh  build_push_indexer.sh  build_push_ingest.sh  cleanup_ecr.sh  cleanup_s3_versioned.sh  deploy_api.sh  deploy_indexer.sh  deploy_ingest.sh  run_indexer.sh  run_indexer_azure.sh  run_ingest.sh  run_ingest_azure.sh
